--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,9 +3,17 @@
     tools:context="com.example.mixtest.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/menu_settings"
+        android:showAsAction="ifRoom"
+        android:title="@string/action_settings"
+        android:actionProviderClass="android.widget.ShareActionProvider"/>
+    
+    <item
+        android:id="@+id/item_offline"
+        android:showAsAction="ifRoom"
+        android:title="退出">
+        
+        
+    </item>
 
 </menu>
