--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -8,7 +8,8 @@
         android:id="@+id/id_list_pic"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_launcher"
+        android:scaleType="centerCrop" />
     
     <LinearLayout 
         android:layout_width="wrap_content"
