--- a/res/layout/list_view.xml
+++ b/res/layout/list_view.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent">
     
-    <ListView 
+    <com.mix.view.ReFlashListView 
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:longClickable="true">
+        android:layout_height="wrap_content"
+        android:longClickable="true"
+        android:background="@color/white"
+        android:dividerHeight="5dp"/>
         
-    </ListView>
 
-</LinearLayout>
+</RelativeLayout>
