--- a/res/layout/top.xml
+++ b/res/layout/top.xml
@@ -17,10 +17,10 @@
 
     <ImageButton
         android:id="@+id/settings"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:src="@drawable/power" />
 
 </LinearLayout>
